--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,9 +1,14 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">Job Listing</a>
+      <a class="navbar-brand" href="/">JDstore</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-exapmple-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active">
+          <%= link_to("Products", products_path)%>
+        </li>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
           <% if !current_user %>
