--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,7 +23,11 @@
     </div>
 
     <div class="pull-right">
-      <%= link_to("加入购物车", add_to_cart_product_path(@product), method: :post, class: "btn btn-danger btn-lg")%>
+      <% if @product.quantity > 0 %>
+        <%= link_to("加入购物车", add_to_cart_product_path(@product), method: :post, class: "btn btn-danger btn-lg")%>
+      <% else %>
+        已经销售一空
+      <% end %>
     </div>
   </div>
 </div>
