--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -23,6 +23,7 @@
       </tbody>
     </table>
 
+
     <div class="total clearfix">
       <span class="pull-right">
         总计<%= @order.total %>CNY
@@ -58,5 +59,14 @@
       </tbody>
 
     </table>
+
+    <% if !@order.is_paid %>
+      <div class="group pull-right">
+        <%= link_to("支付宝支付", pay_with_alipay_order_path(@order.token), method: :post, class: "btn btn-lg btn-danger")%>
+        <%= link_to("微信支付" ,pay_with_wechat_order_path(@order.token), method: :post, class: "btn btn-lg btn-danger")%>
+      </div>
+    <% else %>
+      <p class="text-center">此订单已完成付款</p>
+    <% end %>
   </div>
 </div>
