--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -16,6 +16,7 @@
           <ul class="nav nav-pliis nav-stacked" style="max-width: 300px;">
             <li>
               <%= link_to("Products", admin_products_path)%>
+              <%= link_to("Orders", admin_orders_path)%>
             </li>
           </ul>
         </div>
