--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -13,7 +13,7 @@
     <% @orders.each do |order| %>
       <tr>
         <td>
-          <%= link_to(order.id, admin_orders_path(order))%>
+          <%= link_to(order.id, admin_order_path(order))%>
         </td>
         <td>
           <%= order.created_at.to_s(:long)%>
