--- a/app/views/order_mailer/apply_cancel.html.erb
+++ b/app/views/order_mailer/apply_cancel.html.erb
@@ -1,11 +1,17 @@
 <div class="row">
   <div class="col-md-12">
-    <h2>订单明细</h2>
+    <h2>
+      订单明细
+      <br>
+      <small>
+        <%= link_to("订单连接", order_url(@order.token))%>
+      </small>
+    </h2>
 
     <table class="table table-bordered">
       <thead>
         <tr>
-          <th width="80%">商品明细</th>
+          <th width="70%">商品明细</th>
           <th>单价</th>
         </tr>
       </thead>
@@ -23,8 +29,7 @@
       </tbody>
     </table>
 
-
-    <div class="total clearfix">
+    <div class="total group clearfix">
       <span class="pull-right">
         总计<%= @order.total %>CNY
       </span>
@@ -59,20 +64,5 @@
       </tbody>
 
     </table>
-
-    <div class="pull-right">
-      <% if @order.order_placed? || @order.paid? %>
-        <%= link_to("申请取消订单", apply_to_cancel_order_path(@order.token), method: :post, class: "btn btn-lg btn-primary")%>
-      <% end %>
-    </div>
-
-    <% if !@order.is_paid %>
-      <div class="group pull-right">
-        <%= link_to("支付宝支付", pay_with_alipay_order_path(@order.token), method: :post, class: "btn btn-lg btn-danger")%>
-        <%= link_to("微信支付" ,pay_with_wechat_order_path(@order.token), method: :post, class: "btn btn-lg btn-danger")%>
-      </div>
-    <% else %>
-      <p class="text-center">此订单已完成付款</p>
-    <% end %>
   </div>
 </div>
